<resources>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title" translatable="false">Mohamad Albarak</string>
    <string name="app_name">Mohamad Albarak</string>

    <string name="title_dialogue" translatable="false">title dialogue</string>


    <string name="abt">About</string>
    <string name="abt_description">"  Mohamad Albarak is a renowned reciter of the Holy Qur’an. He was born in a village called Shobra Al Namla in Tanta, Egypt.

Mahmoud entered the Qur’an School at the age of four. At 8, he had already memorized the whole Qur’an and at 12, he entered to the religious institute and learnt the ten recitations in Al Azhar.

Mohamad Albarak first recited the Holy Qur’an in his village mosque. In 1944, he entered the official radio station as reciter where he made his first recitation on 16 February 1944. On August 7, 1948, he was nominated Muadhin (Prayer caller) of Sidi Hamza Mosque and then a reciter in the same mosque. He was also supervising recitation centers of Al Gharbia province.

In 1949, Mohamad Albarak was appointed reciter of Sidi Ahmed Al Badaoui of Tanta , of Al Ahmadi Mosque and then of Al Imam Al Hussein Mosque in Cairo by 1955.

Mohamad Albarak was one of the most esteemed reciters of his time. A serial, “Imam Al Moqr’ine”, starring Hassan Youssef, was dedicated to Al Hussary’s life and performances.  "</string>
    <string name="share_phrase">Listen and download the Quran recited by Mohamad Albarak</string>

    <string name="privacy_title">Privacy Policy</string>

    <string name="set_text" translatable="false">choose surah to play it</string>
    <string name="already_download">alrady downloaded, play it from downloaded playlist</string>
    <string name="down_progress">Please wait while file is downloaded…</string>

    <string name="stp_repeat">repeat mode \"OFF\"</string>
    <string name="repeat_active">repeat mode \"ON\"</string>

    <string name="stp_shuflle">shuffle mode \"OFF\"</string>
    <string name="shuflle_active">shuffle mode \"ON\"</string>

    <string name="downnloadin">please wait, download in progress</string>
    <string name="down_cancel">The download has been canceled</string>
    <string name="lost_internet">Ne peuvent pas se connecter à Internet, vous ne pouvez ecouter que les sourates téléchargées !</string>

    <string name="down_ok">The surah has been downloaded successfully</string>

    <string name="no_net">Internet connection not active !</string>
    <string name="no_net_msg">Internet connection not active ! Do you want activate it ?</string>

    <string name="lbl_playlist">Playlist</string>
    <string name="lbl_downloaded_playlist">Downloaded playlist</string>
    <string name="lbl_about">About</string>
    <string name="lbl_share_app">Share app</string>
    <string name="lbl_rate_app">Rate app</string>
    <string name="lbl_privacy_policy">Privacy policy</string>
    <string name="msg_no_downloads">You have not downloaded anything yet !</string>
    <string name="title_playlist">Surah Playlist</string>
    <string name="title_content">Playlist</string>
    <string name="title_playlist_downloaded">Downloaded Surahs</string>
    <string name="lbl_about_title_content">About</string>
    <string name="msg_share">Listen and download the Quran recited by Mohamad Albarak</string>
    <string name="msg_privacy_title">Privacy Policy</string>
    <string name="content_privacy">"  MuslimCharityApps Privacy Policy     All users that download our apps made by MuslimCharityApps, accept the next terms and conditions: MuslimCharityApps is firmly committed to protecting privacy of his users. We respect your privacy and will not collect any personal information ADS : We use AdMob ads in our free apps. http://www.google.com/ads/admob/  – https://www.google.com/policies/privacy/partners All ads are shown in-app, ads can be banners or interstitial, you will never see an ad out of the apps. We need permissions to access your sensitive personal info ONLY for use directly on your device and without these informations our apps will not be able to function with you. Permissions : * READ_PHONE_STATE : Check if the phone is ringing or a call has ended to pause/unpause the player * ACCESS_NETWORK_STATE : Check if the mobile is online ads, checking for new app version * WRITE_EXTERNAL_STORAGE : used to store downloaded Quran mp3 . please feel free to contact us if you have any question about MuslimCharityApps Privacy policy. MuslimCharityApps muslimcharityapps@gmail.com "</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_exit">Exit</string>
    <string name="title_exit">Exit</string>
    <string name="msg_exit">Are you sure you want to exit the application?</string>
    <string name="exit_app">Click again to exit the application</string>

    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="msg_weather_by_zip_code" translatable="false">Weather by zip code</string>
    <string name="msg_delete_song">Are you sure you want to delete this Surah ?</string>
    <string name="msg_song_deleted">Surah deleted successfully</string>
    <string name="msg_delete_failed">Delete failed, please try again!</string>
    <string name="msg_schedule_notification">Listen to the holy quran</string>
    <string name="lbl_favorite_playlist">Favorite Playlist</string>
    <string name="facebook_app_id" translatable="false">382174222165510</string>

    <string-array name="array_supported_language">
        <item>en</item>
        <item>ar</item>
        <item>es</item>
        <item>fr</item>
    </string-array>

    <string-array name="array_supported_language_title">
        <item>English</item>
        <item>Arabic</item>
        <item>Espange</item>
        <item>French</item>
    </string-array>
    <string name="no_internet_network" translatable="false">ربما لا توجد شبكة إنترنت تأكد من الأنترنت</string>
    <string name="download_successful" translatable="false">تم تحميل السورة بنجاح </string>
    <string name="download_field" translatable="false">لم يتم تحميل السورة بنجاح </string>
    <string name="download_sound" translatable="false">جاري تحميل السورة</string>
    <string name="send_problem_string" translatable="false"> السُّورَةُ تَمَّ تَحْمِيلُهَا مِنْ قَبْلُ
 إِذَا وَاجَهْتُكَ أَيُّ مُشْكِلَةٌ (رَاسِلُنَا) نَحْنُ جَاهِزِينَ لِحَلِّهَا</string>
    <string name="mp3" translatable="false">.mp3</string>
    <string name="setDescriptionRequet" translatable="false">جاري التحميل</string>


    <string-array name="array_songs">
        <item>Alfatiha</item>
        <item>Yusuf </item>
        <item>Ya Sin </item>
        <item>As-Saffat</item>
        <item>Ad-Dukhan</item>
        <item>Al-Jathiya</item>
        <item>Qaf</item>
        <item>Adh-Dhariyat</item>
        <item>At-Tour</item>
        <item>An-Najm</item>
        <item>Al-Qamar</item>
        <item>Ar-Rahman</item>
        <item>"Al-Waqi'a"</item>
        <item>Al-Hadeed</item>
        <item>Al-Mulk</item>
        <item>Al-Qalam</item>
        <item>Al-Haqqa</item>
        <item>"Al-Ma'aarij"</item>
        <item>Nouh</item>
        <item>Al-Jinn</item>
        <item>Al-Muzzammil</item>
        <item> Al-Muddaththir </item>
        <item>Al-Qiyama</item>
        <item>Al-Insan</item>
        <item>Al-Mursalat</item>
        <item>"An-Naba'"</item>
        <item>"An-Nazi'at"</item>
        <item>Abasa</item>
        <item>At-Takweer</item>
        <item>Al-Infitar</item>
        <item>Al-Mutaffifeen</item>
        <item>Al-Inshiqaq</item>
        <item>Al-Burooj</item>
        <item>At-Tariq</item>
        <item>"Al-A'la"</item>
        <item>Al-Ghashiyah</item>
        <item>Al-Fajr</item>
        <item>Al-Balad</item>
        <item>Ash-Shams</item>
        <item>Al-Lail</item>
        <item>Ad-Dhuha</item>
        <item>Ash-Sharĥ</item>
        <item>At-Teen</item>
        <item>Al-Alaq</item>
        <item>Al-Qadr</item>
        <item>Al-Bayyina</item>
        <item>Az-Zalzala</item>
        <item>Al-Adiyat</item>
        <item>Al-Qaria</item>
        <item>At-Takathur</item>
        <item>Al-Asr</item>
        <item>Al-Humaza</item>
        <item>Al-Feel</item>
        <item>Quraysh</item>
        <item>"Al-Maa'oun"</item>
        <item>Al-Kawthar</item>
        <item>Al-Kafiroun</item>
        <item>An-Nasr</item>
        <item>Al-Masad</item>
        <item>Al-Ikhlas</item>
        <item>Al-Falaq</item>
        <item>Al-Nas</item>
    </string-array>
    <string name="noti">Notifications</string>
    <string name="msg_cncl">Cancel</string>
    <string name="default_notification_channel_id" translatable="false">قران كريم</string>

    <string name="error_play_song" translatable="false">Internet not active you can only play downloaded songs</string>
    <string name="lbl_ok">OK</string>
    <string name="language" translatable="false">language</string>
    <string name="sorry_for_confdent" translatable="false">"نعتدر عن ازعاجكم ...والمرجو الابلاغ عن اي اعلانات غير لائقة"</string>
</resources>
